# openapi3-parser

./: .gitignore  LICENSE  Makefile  Pipfile  SECURITY.md  justfile  license.txt  pyproject.toml  readme.md  setup.cfg  setup.py  test.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  main.yml  publish.yml  release.yml  upload.yml
build_mime_types/: README.md  application.csv  build_mime_types.py  test_build_mime_types.py
docs/: recipes.md
src/: __main__.py  main.py
src/openapi_parser/: __init__.py  enumeration.py  errors.py  logging.py  loose_types.py  mime_types.py  parser.py  resolver.py  specification.py
src/openapi_parser/builders/: __init__.py  common.py  content.py  encoding.py  external_doc.py  header.py  info.py  link.py  oauth_flow.py  operation.py  parameter.py  path.py  request.py  response.py  schema.py  schemas.py  security.py  server.py  tag.py
src/swagger_parser/: __init__.py  common.py  enumeration.py  parser.py  resolver.py  specification.py
src/swagger_parser/builders/: __init__.py  external_doc.py  info.py  server.py  tag.py
swagger/: schemas.yml  swagger.yml
swagger_parser/: __init__.py  parser.py  specification.py
tests/: openapi_fixture.py  test_content_parser.py  test_enumeration.py  test_external_doc_builder.py  test_info_builder.py  test_logging.py  test_mime_types.py  test_operation_parser.py  test_parser.py  test_parser_options.py  test_path_builder.py  test_request_body_parser.py  test_resolver.py  test_runner.py  test_schema_parser.py  test_schema_resolver.py  test_server_builder.py  test_specification_parser.py  test_tag_builder.py
tests/builders/: test_common.py  test_content.py  test_content_builder.py  test_encoding_builder.py  test_external_doc_builder.py  test_header.py  test_header_builder.py  test_info_builder.py  test_link_builder.py  test_not.py  test_oauth_flow_builder.py  test_operation.py  test_operation_builder.py  test_parameter.py  test_parameter_builder.py  test_path.py  test_path_builder.py  test_request.py  test_request_builder.py  test_response.py  test_response_builder.py  test_security_builder.py  test_server_builder.py  test_tag_builder.py
tests/builders/schema/: test_anyof.py  test_array.py  test_boolean.py  test_integer.py  test_null.py  test_number.py  test_object.py  test_oneof.py  test_schema_factory.py  test_string.py
tests/data/: non-strict.yml  recursive.yml  swagger.json  swagger.yml
tests/data/swagger/: swagger.yml
