[project]
name = "openapi3-parser"
version = "1.1.22"
description = "OpenAPI v3 parser"
readme = "readme.md"
license = { file = "license.txt" }
authors = [{ name = "Artem Manchenkov", email = "artem@manchenkoff.me" }]
requires-python = ">=3.10"
keywords = [
  "swagger",
  "python",
  "swagger-parser",
  "openapi3-parser",
  "parser",
  "openapi3",
  "swagger-api",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
    "openapi-spec-validator>=0.8.5",
    "prance>=25.4.8.0",
]

[project.urls]
homepage = "https://github.com/manchenkoff/openapi3-parser"
source = "https://github.com/manchenkoff/openapi3-parser"

[dependency-groups]
dev = ["mypy>=2.1.0", "pytest>=9.0.3", "pytest-cov>=6.1.0", "ruff>=0.15.13", "ty>=0.0.37"]

[build-system]
requires = ["uv_build>=0.11.12,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "openapi_parser"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"

[[tool.mypy.overrides]]
module = "prance"
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = [
  "D",      # pydocstyle
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "SIM",    # flake8-simplify
  "I",      # isort
  "ARG",    # unused arguments
  "RUF100", # unused noqa
  "TID252", # ban relative imports
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ARG"]

[tool.coverage.run]
source = ["openapi_parser"]
omit = ["tests/*"]
