[metadata]
license_files = license.txt

[mypy]
python_version = 3.8
ignore_missing_imports=True
check_untyped_defs = True
disallow_any_generics = False
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
ignore_errors = False
implicit_reexport = False
strict_equality = True
no_implicit_optional = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True

[pytype]
python_version = 3.8
exclude =
    **/*_test.py
    **/test_*.py
inputs =
    .
keep_going = False
jobs = 4
output = .pytype
pythonpath =
    ./src
check_attribute_types = True
check_container_types = True
check_parameter_types = True
check_variable_types = True
disable =
    pyi-error
report_errors = True
# Experimental
precise_return = True
protocols = False
strict_import = False