[metadata]
license_files = license.txt

[mypy]
python_version = 3.9

check_untyped_defs = True
follow_imports = silent
no_implicit_reexport = True
no_implicit_optional = True

strict_optional = True
strict_equality = True

ignore_missing_imports=True
ignore_errors = False

disallow_any_generics = False
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True

warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True
